--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -1,5 +1,5 @@
 osc {
-    apiurl = "https://opensky-network.org/api/states/all"
-    connectTimeout = 5000
-    readTimeout = 5000
+    api-url = "https://opensky-network.org/api/states/all"
+    connect-timeout = 5000
+    read-timeout = 5000
 }
