--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -2,4 +2,5 @@ osc {
     api-url = "https://opensky-network.org/api/states/all"
     connect-timeout = 5000
     read-timeout = 5000
+    wait-time = 5000
 }
