fix sending to Kakfa

--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -3,3 +3,10 @@ osc {
     connect-timeout = 5000
     read-timeout = 5000
 }
+
+kafkaconfig {
+    bootstrap-servers = "docker_kafka_1:9092"
+    key-serializer = "org.apache.kafka.common.serialization.StringSerializer"
+    value-serializer = "org.apache.kafka.common.serialization.StringSerializer"
+    acks = "all"
+}
