fix producer creation, add topic to config, add manage method

--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -9,4 +9,5 @@ kafkaconfig {
     key-serializer = "org.apache.kafka.common.serialization.StringSerializer"
     value-serializer = "org.apache.kafka.common.serialization.StringSerializer"
     acks = "all"
+    topic = "openskystates"
 }
