change the lib for connection

--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -2,6 +2,7 @@ osc {
     api-url = "https://opensky-network.org/api/states/all"
     connect-timeout = 5000
     read-timeout = 5000
+    socket-timeout = 5000
 }
 
 kafkaconfig {
