rewrite computing altitude and speed

--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -12,3 +12,9 @@ kafkaconfig {
     acks = "all"
     topic = "openskystates"
 }
+
+airportsconfig {
+    radius = 12345.5
+    airport1 = "49.842957, 24.031111"
+    airport2 = "50.411198, 30.446634"
+}
