rewrite function for count airplanes

--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -15,6 +15,6 @@ kafkaconfig {
 
 airportsconfig {
     radius = 12345.5
-    airport1 = "49.842957, 24.031111"
+    airport1 = "49.842957, 24.031111" //lat, long
     airport2 = "50.411198, 30.446634"
 }
