--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -15,6 +15,14 @@ kafkaconfig {
 
 airportsconfig {
     radius = 12345.5
-    airport1 = "49.842957, 24.031111" //lat, long
-    airport2 = "50.411198, 30.446634"
+    airports = [
+        {
+            "lat":  49.842957,
+            "long": 24.031111
+        },
+        {
+            "lat":  50.411198,
+            "long": 30.446634
+        },
+    ]
 }
