fix REST api, add some style fixes

--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -9,6 +9,10 @@ kafkaconfig {
     bootstrap-servers = "docker_kafka_1:9092"
     key-serializer = "org.apache.kafka.common.serialization.StringSerializer"
     value-serializer = "org.apache.kafka.common.serialization.StringSerializer"
+    key-deserializer = "org.apache.kafka.common.serialization.StringDeserializer"
+    value-deserializer = "org.apache.kafka.common.serialization.StringDeserializer"
+    poll-timeout = 1000
+    consumer-group = "testgroup"
     acks = "all"
     topic = "openskystates"
 }
@@ -30,4 +34,6 @@ airportsconfig {
 http {
     host = "0.0.0.0"
     port = 8082
+    timeout = 20000
+    duration = 50000
 }
