add comment for unit of measure

--- a/src/main/resources/OpenSky.conf
+++ b/src/main/resources/OpenSky.conf
@@ -18,7 +18,7 @@ kafkaconfig {
 }
 
 airportsconfig {
-    radius = 12345.5
+    radius = 12345.5 //meters
     airports = [
         {
             "lat":  49.842957,
